src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Interest_Competencies__c</fullName>
        <label>Interest: Competencies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Competencies</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Curricula_Programs__c</fullName>
        <label>Interest: Curricula Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Curricula_Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Form_Children_0_3__c</fullName>
        <label>Interest Form Children 0-3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Form_City__c</fullName>
        <label>Interest Form City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Form_Contact_Phone__c</fullName>
        <label>Interest Form Contact Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Form_Country__c</fullName>
        <label>Interest Form Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Form_Email_Address__c</fullName>
        <label>Interest Form Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Form_First_Name__c</fullName>
        <label>Interest Form First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Form_How_Did_You_Hear__c</fullName>
        <label>Interest Form How Did You Hear</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interest_Form_Job_Title__c</fullName>
        <label>Interest Form Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Form_Last_Name__c</fullName>
        <label>Interest Form Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Form_Mailing_Address__c</fullName>
        <label>Interest Form Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interest_Form_Name_of_Practice__c</fullName>
        <label>Interest Form Name of Practice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Form_Organization__c</fullName>
        <label>Interest Form Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Form_Other_Information__c</fullName>
        <label>Interest Form Other Information</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interest_Form_Primary_Practice_Setting__c</fullName>
        <label>Interest Form Primary Practice Setting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Form_Salutation__c</fullName>
        <label>Interest Form Salutation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Form_State__c</fullName>
        <label>Interest Form State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Form_Telephone_Number__c</fullName>
        <label>Interest Form Telephone Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Form_Website__c</fullName>
        <label>Interest Form Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Form_Zip_Code__c</fullName>
        <label>Interest Form Zip Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Formats__c</fullName>
        <label>Interest: Formats</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Formats</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Topical_Sessions__c</fullName>
        <label>Interest: Topical Sessions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Topical_Sessions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Implementation_Plan_Reminder__c</fullName>
        <description>This is the date that the last Implementation Plan reminder was sent.</description>
        <inlineHelpText>This is the date that the last Implementation Plan reminder was sent.</inlineHelpText>
        <label>Last Implementation Plan Reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Practice_Assessment_Reminder__c</fullName>
        <description>This is the date that the last Practice Assessment Reminder was sent.</description>
        <inlineHelpText>This is the date that the last Practice Assessment Reminder was sent.</inlineHelpText>
        <label>Last Practice Assessment Reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Site_Profile_Reminder__c</fullName>
        <description>This is the date that the last Site Profile reminder was sent. (Initial or Annual)</description>
        <inlineHelpText>This is the date that the last Site Profile reminder was sent. (Initial or Annual)</inlineHelpText>
        <label>Last Site Profile Reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sample Level field for use with Level feature. May be deleted or edited as needed.</description>
        <label>Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Households</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MostRecentImplementationPlanComplete__c</fullName>
        <label>Most Recent Implementation Plan Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MostRecentSiteProfileCompleted__c</fullName>
        <label>Most Recent Site Profile Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPSP_PC_Email__c</fullName>
        <formula>npe01__One2OneContact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPSP PC Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPSP_Primary_Contact_Phone__c</fullName>
        <formula>npe01__One2OneContact__r.npe01__WorkPhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nimble_ID__c</fullName>
        <externalId>true</externalId>
        <label>Nimble ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Other_Funders__c</fullName>
        <label>Other Funders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_MIC4G_CHV_Programs_Offered__c</fullName>
        <label>Other MIECHV Programs Offered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Assessment_Merge__c</fullName>
        <formula>"&amp;Id=" + Id +
"&amp;TemplateId=a12f4000005wZ1Z" +
"&amp;SC0=1" +
"&amp;SC1=Attachments" +
"&amp;DS7=13"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Practice Assessment Merge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sample Previous Level field for use with new Level feature. May be edited or deleted as needed.</description>
        <label>Previous Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Households (Previous Level)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_AccountId__c</fullName>
        <description>if(
contains(Name,"Anonymous") &amp;&amp; npe01__One2OneContact__r.AccountId != Id
,casesafeid(npe01__One2OneContact__r.AccountId)
,casesafeid(Id)
)</description>
        <formula>if(
Name = 'Anonymous Household' &amp;&amp; npe01__One2OneContact__r.AccountId != Id
,npe01__One2OneContact__r.AccountId
,Id
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_AA_Amended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Second AA Amended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Profile_Merge__c</fullName>
        <formula>"&amp;Id=" + Id +
"&amp;QueryId=[SiteProfile]a0uf400000FE1mv" +
"&amp;TemplateId=a12f4000005wZ1U"+
"&amp;DefaultPDF=1" +
"&amp;SC0=1" +
"&amp;SC1=Attachments" +
"&amp;DS7=13" +
"&amp;OFN=HealthySteps+Annual+Site+Profile+-+2019+" + Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Profile Merge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Profile_Submitted_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Profile Submitted Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox helps identify test accounts</description>
        <inlineHelpText>Check this checkbox if this is a test account</inlineHelpText>
        <label>Test Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_FormAssembly_Merge__c</fullName>
        <label>Test FormAssembly Merge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_AA_Amended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third AA Amended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TrainingAttended__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Training session that contacts from this HealthySteps Site attended.</description>
        <inlineHelpText>The Training session that contacts from this HealthySteps Site attended.</inlineHelpText>
        <label>HealthySteps Institute Training Attended</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>HealthyStep Site Attendance</relationshipLabel>
        <relationshipName>HealthySteps_Site_Attendance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trigger_Resend_Impletn_Plan_Reminder__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Trigger Resend Impletn Plan Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger_Resend_Practice_Asmt_Remin__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to trigger process automation to send email if Practice Assessment Completed is blank.</description>
        <inlineHelpText>Used to trigger process automation to send email if Practice Assessment Completed is blank.</inlineHelpText>
        <label>Trigger Resend Practice Asmt Remin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger_Resend_Site_Profile_Reminder__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Trigger Resend Site Profile Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c4g_AA_Effective_Date__c</fullName>
        <inlineHelpText>Date Affiliate Agreement effective</inlineHelpText>
        <label>AA First Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c4g_Account_CaseSafe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account  CaseSafe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c4g_Annual_Site_Profile_Submitted_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field completed by FormAssembly's site Profile Update.
Field unchecked as part of the Send Site Profile WFR.
Not on page layout.</description>
        <label>Annual Site Profile Submitted Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c4g_Date_Interest_Form_Received__c</fullName>
        <label>Interest Form Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c4g_Primary_Contact_First_Name__c</fullName>
        <formula>npe01__One2OneContact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact: First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c4g_TLA_Execution_Date__c</fullName>
        <inlineHelpText>Date Trademark License Agreement signed</inlineHelpText>
        <label>TLA Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cfg_Autism_Screening_Comments__c</fullName>
        <label>Autism Screening Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Autism_Screening_NO_Comments__c</fullName>
        <label>Autism Screening NO Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Autism_Screening_Plan__c</fullName>
        <label>Autism Screening Plan</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Autism_Screening__c</fullName>
        <label>Autism Screening</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet present</fullName>
                </value>
                <value>
                    <fullName>Beginning to implement (&lt;50% of families)</fullName>
                </value>
                <value>
                    <fullName>Mostly implemented (50-90% of families)</fullName>
                </value>
                <value>
                    <fullName>Standard practice (&gt;90% of families)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Care_Coordination_Delivery_Requ__c</fullName>
        <label>Care Coordination Delivery Requirement</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Care_Coordination__c</fullName>
        <label>Care Coordination</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Child_Development_Behavior_Consults__c</fullName>
        <label>Child Development &amp; Behavior Consults</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Child_Development_Support_Line__c</fullName>
        <label>Child Development Support Line</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Child_Developmental_Screening__c</fullName>
        <label>Child Developmental Screening</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Children_0_3_Served_Annually__c</fullName>
        <label>Children 0-3 Served Annually</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cfg_Community_Based_Mental_Health__c</fullName>
        <label>Community-Based Mental Health Services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Site is located in a community with basic services available to support family needs</fullName>
                </value>
                <value>
                    <fullName>Site is located in a community with a wide variety of externally located supports</fullName>
                </value>
                <value>
                    <fullName>Site is located in a community with a wide variety of supports; some of which are available on site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Community_Based_Support_Services__c</fullName>
        <label>Community Based Support Services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Site is located in a community with basic services available to support family needs</fullName>
                </value>
                <value>
                    <fullName>Site is located in a community with a wide variety of supports</fullName>
                </value>
                <value>
                    <fullName>Site is located in a community with a wide variety of supports; some of which are available on site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Community_Partners_Comments__c</fullName>
        <label>Community Partners Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Community_Partners_NO_Comments__c</fullName>
        <label>Community Partners NO Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Community_Stakeholder_Comments__c</fullName>
        <label>Community Stakeholder Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Community_Stakeholder_Convening__c</fullName>
        <label>Community Stakeholder Convening</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No one convenes organizations that serve the broad health, mental health, and social needs of young children and their families</fullName>
                </value>
                <value>
                    <fullName>Community has infrastructure (i.e. a “backbone organization”) that convenes broad health, mental health, and social needs services for young children and their families, but the practice plays no role</fullName>
                </value>
                <value>
                    <fullName>Practice or its parent health system plays an integral role (perhaps as the “backbone organization”) in convening organizations that serve the health, mental health, and social needs of young children and their families</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Community_Stakeholder_NO_Comments__c</fullName>
        <label>Community Stakeholder NO Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Coordinate_HS_Specialist_Time__c</fullName>
        <label>Coordinate HS Specialist Time</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Cost_of_Training__c</fullName>
        <formula>TrainingAttended__r.C4G_Cost_of_Training__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost of Training</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cfg_Count_of_HSI_Preparation_Calls__c</fullName>
        <description>Populated by DLRS scheduled to calculate each night</description>
        <label>Count of HSI Preparation Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cfg_Count_of_Readiness_Assessment_Calls__c</fullName>
        <description>Populated by DLRS scheduled to calculate each night</description>
        <label>Count of Practice Assessment Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cfg_Count_of_Technical_Assistance_Calls__c</fullName>
        <description>Populated by DLRS scheduled to calculate each night</description>
        <label>Count of Technical Assistance Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cfg_Count_of_Triage_Sales_Info_Calls__c</fullName>
        <description>Populated by DLRS scheduled to calculate each night</description>
        <label>Count of Triage, Sales, Info Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cfg_County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Data_Collection_Comments__c</fullName>
        <label>Data Collection Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Data_Collection_NO_Comments__c</fullName>
        <label>Data Collection NO Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Data_Collection_Reporting__c</fullName>
        <label>Data Collection &amp; Reporting</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Data_Collection_Status__c</fullName>
        <label>Data Collection Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Practice does not collect any of these data points</fullName>
                </value>
                <value>
                    <fullName>Practice collects some of these data points</fullName>
                </value>
                <value>
                    <fullName>Practice collects all of these data points</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Data_Use_Comments__c</fullName>
        <label>Data Use Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Data_Use_NO_Comments__c</fullName>
        <label>Data Use NO Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Data_Use_Status__c</fullName>
        <label>Data Use Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EMR and/or other data system does not have specific fields in which screening results can be documented for ease of extraction; results can only be typed into a “free-text” field</fullName>
                </value>
                <value>
                    <fullName>EMR and/or other data system has specific fields in which screening results are documented (as opposed to free text), but they cannot be easily extracted (e.g. IT staff or software vendor limitations)</fullName>
                </value>
                <value>
                    <fullName>EMR and/or other system has specific fields in which screening results are document and can be easily extracted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Developmental_Screening_Comments__c</fullName>
        <label>Developmental Screening Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Developmental_Screening_NO_Comments__c</fullName>
        <label>Developmental Screening NO Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Developmental_Screening_Status__c</fullName>
        <label>Developmental Screening Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet present</fullName>
                </value>
                <value>
                    <fullName>Beginning to implement (&lt;50% of families)</fullName>
                </value>
                <value>
                    <fullName>Mostly implemented (50-90% of families)</fullName>
                </value>
                <value>
                    <fullName>Standard practice (&gt;90% of families)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Documentation__c</fullName>
        <label>Documentation</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Donor_Status__c</fullName>
        <label>Donor Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active Donor</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Lapsed Donor</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Reengaged Donor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Early_Learning_Delivery_Requirements__c</fullName>
        <label>Early Learning Delivery Requirements</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Early_Learning_Resources__c</fullName>
        <label>Early Learning Resources</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Ensure_Tier_2_3_Services__c</fullName>
        <label>Ensure Tier 2 &amp; 3 Services</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_FIDELITY_HSS_EDUCATION__c</fullName>
        <formula>IF(OR(ISPICKVAL(cfg_Highest_Level_of_Education__c,"Bachelor’s degree"),
ISPICKVAL(cfg_Highest_Level_of_Education__c,"Master’s degree"),
ISPICKVAL(cfg_Highest_Level_of_Education__c,"Doctoral degree"),
ISPICKVAL(cfg_Highest_Level_of_Education__c,"Professional degree")),"yes","no")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FIDELITY:HSS EDUCATION</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Family_Needs_Delivery_Requirements__c</fullName>
        <label>Family Needs Delivery Requirements</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Family_Needs_Screening_Comments__c</fullName>
        <label>Family Needs Screening Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Family_Needs_Screening_NO_Comments__c</fullName>
        <label>Family Needs Screening NO Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Family_Needs_Screening_Status__c</fullName>
        <label>Family Needs Screening Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet present</fullName>
                </value>
                <value>
                    <fullName>Beginning to implement (&lt;50% of families)</fullName>
                </value>
                <value>
                    <fullName>Mostly implemented (50-90% of families)</fullName>
                </value>
                <value>
                    <fullName>Standard practice (&gt;90% of families)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Financing_HealthySteps_Comments__c</fullName>
        <label>Financing HealthySteps Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Financing_HealthySteps_NO_Comments__c</fullName>
        <label>Financing HealthySteps NO Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Financing_HealthySteps_Status__c</fullName>
        <label>Financing HealthySteps Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Site has not identified a plan for funding HealthySteps.</fullName>
                </value>
                <value>
                    <fullName>Actively pursuing new, dedicated funding</fullName>
                </value>
                <value>
                    <fullName>Have already secured new, dedicated funding</fullName>
                </value>
                <value>
                    <fullName>Will use existing funding/positions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Funder_of_HealthySteps_Sites__c</fullName>
        <label>Funder of HealthySteps Sites</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Giving_Level__c</fullName>
        <label>Giving Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contributors ($1-99)</fullName>
                </value>
                <value>
                    <fullName>Supporters ($100-499)</fullName>
                </value>
                <value>
                    <fullName>Friends ($500-999)</fullName>
                </value>
                <value>
                    <fullName>Caregivers ($1,000-4,999)</fullName>
                </value>
                <value>
                    <fullName>Nurturers ($5,000-9,999)</fullName>
                </value>
                <value>
                    <fullName>Partners ($10,000-24,999)</fullName>
                </value>
                <value>
                    <fullName>Champions ($25,000-99,999)</fullName>
                </value>
                <value>
                    <fullName>Benefactors ($100,000 &amp; Up)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Goals_Motivations__c</fullName>
        <label>Goals &amp; Motivations</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Goals_and_Motivations_Comments__c</fullName>
        <label>Goals and Motivations Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Goals_and_Motivations_NO_Comments__c</fullName>
        <label>Goals and Motivations NO Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Goals_and_Motivations_Status__c</fullName>
        <label>Goals and Motivations Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Site has not conducted a review of family and practice needs in order to develop a plan that outlines how HealthySteps meets these needs.</fullName>
                </value>
                <value>
                    <fullName>Site has completed a review of their practice and families’ needs, how HealthySteps implementation will meet these needs.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>